--- a/Tabela.html
+++ b/Tabela.html
@@ -50,11 +50,11 @@
     </ol>
     <br>
     <h2>Lista 3 (ordonată cu litere)</h2>
-    <ol type="A">
+    <td type="A">
         <li>Element 1</li>
         <li>Element 2</li>
         <li>Element 3</li>
-    </ol>
+    </td>
 </body>
 
 </html>
